--- a/ganglia-web/conf_default.php.in
+++ b/ganglia-web/conf_default.php.in
@@ -195,9 +195,9 @@ $conf['graphite_rrd_dir'] = "/opt/graphite/storage/rrd";
 # One of the bottlenecks is that to get individual metrics we query gmond which
 # returns every single host and all the metrics. If you have lots of hosts and lots of 
 # checks this may be quite heavy so you may want to cache data
-define("CACHEDATA", 1);
-define("CACHEFILE", $conf['ganglia_dir'] . "/conf/ganglia_metrics.cache");
-define("CACHETIME", 1200); // How long to cache the data in seconds
+$conf['cachedata'] = 1;
+$conf['cachefile'] = $conf['ganglia_dir'] . "/conf/ganglia_metrics.cache";
+$conf['cachetime'] = 1200; // How long to cache the data in seconds
 
 #
 # Graph sizes
