generate a shared secret via Make, so every install gets a new one.

--- a/.htaccess.in
+++ b/.htaccess.in
@@ -2,7 +2,7 @@ php_value include_path ".:./lib"
 
 # This should be moved to the main server config.
 # So it can't be read by other users on the server.
-SetEnv ganglia_secret please-change-this-value
+SetEnv ganglia_secret @ganglia_secret@
 
 <Files "login.php">
   AuthType Basic
