Change the location for the metrics/host cache file to be in /var/lib/ganglia/conf

--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -199,11 +199,11 @@ $conf['graph_engine'] = "rrdtool";
 $conf['graphite_url_base'] = "http://127.0.0.1/render";
 $conf['graphite_rrd_dir'] = "/opt/graphite/storage/rrd";
 
-# One of the bottlenecks is that to get individual metrics we query gmond which
+# One of the bottlenecks is that to get individual metrics we query gmetad which
 # returns every single host and all the metrics. If you have lots of hosts and lots of 
 # checks this may be quite heavy so you may want to cache data
 $conf['cachedata'] = 1;
-$conf['cachefile'] = $conf['ganglia_dir'] . "/conf/ganglia_metrics.cache";
+$conf['cachefile'] = $conf['conf_dir'] . "/conf/ganglia_metrics.cache";
 $conf['cachetime'] = 1200; // How long to cache the data in seconds
 
 #
