--- a/ganglia-web/conf_default.php.in
+++ b/ganglia-web/conf_default.php.in
@@ -279,8 +279,11 @@ $conf['metric_groups_initially_collapsed'] = false;
 # in events.json
 $conf['overlay_events'] = false;
 
+# Overlay events line can be either dashed or solid. It is assumed to be dashed unless specified otherwise
+$conf['overlay_events_line_type'] = "dashed";
+
 # Where is the Overlay events file stored
-$conf['events_file'] = $conf['conf_dir'] . "/events.json";
+$conf['overlay_events_file'] = $conf['conf_dir'] . "/events.json";
 
 # Colors to use e.g. in graph_colors
 $conf['graph_colors'] = array("0000A3", "FF3300", "FFCC33", "00CC66", "B88A00", "33FFCC", "809900", "FF3366", "FF33CC", "CC33FF", "CCFF33", "FFFF66", "33CCFF");
