--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -203,7 +203,7 @@ $conf['graphite_rrd_dir'] = "/opt/graphite/storage/rrd";
 # returns every single host and all the metrics. If you have lots of hosts and lots of 
 # checks this may be quite heavy so you may want to cache data
 $conf['cachedata'] = 1;
-$conf['cachefile'] = $conf['conf_dir'] . "/conf/ganglia_metrics.cache";
+$conf['cachefile'] = $conf['conf_dir'] . "/ganglia_metrics.cache";
 $conf['cachetime'] = 1200; // How long to cache the data in seconds
 
 #
