--- a/ganglia-web/conf_default.php.in
+++ b/ganglia-web/conf_default.php.in
@@ -61,6 +61,7 @@ $conf['graphdir']='./graph.d';
 
 # Display statistical values on RRD graphs; i.e.: average, min, max
 $conf['graphreport_stats'] = true;
+$conf['graphreport_stat_items'] = array("now", "min", "avg", "max");
 
 #
 # If you want to grab data from a different ganglia source specify it here.
@@ -313,6 +314,9 @@ $conf['overlay_events_shade_alpha'] = '50';
 
 # Colors to use e.g. in graph_colors
 $conf['graph_colors'] = array("0000A3", "FF3300", "FFCC33", "00CC66", "B88A00", "33FFCC", "809900", "FF3366", "FF33CC", "CC33FF", "CCFF33", "FFFF66", "33CCFF");
-
+# Decorated titles are of the form cluster/host, graph_title/metric, 
+# time range. By setting this attribute to false the clsuter/host and 
+# time range items are excluded.
+$conf['decorated_graph_title'] = true;
 
 ?>
