--- a/ganglia-web/conf_default.php.in
+++ b/ganglia-web/conf_default.php.in
@@ -314,5 +314,7 @@ $conf['overlay_events_shade_alpha'] = '50';
 # Colors to use e.g. in graph_colors
 $conf['graph_colors'] = array("0000A3", "FF3300", "FFCC33", "00CC66", "B88A00", "33FFCC", "809900", "FF3366", "FF33CC", "CC33FF", "CCFF33", "FFFF66", "33CCFF");
 
+# Are heatmaps enabled
+$conf['heatmaps_enabled'] = 0;
 
 ?>
