--- a/gweb.spec.in
+++ b/gweb.spec.in
@@ -14,9 +14,9 @@ Buildroot: %{_tmppath}/%{name}-%{version}-buildroot
 Obsoletes: ganglia-webfrontend
 Requires: php >= 5, php-gd
 %if 0%{?suse_version}
-%define web_prefixdir /srv/www/htdocs/ganglia
+%define web_prefixdir /srv/www/htdocs/gweb
 %else
-%define web_prefixdir /var/www/html/ganglia
+%define web_prefixdir /var/www/html/gweb
 %endif
 Prefix: %{web_prefixdir}
 BuildArchitectures: noarch
@@ -40,12 +40,15 @@ written in the PHP5 language and uses the Dwoo templating engine.
 %__rm -f $RPM_BUILD_ROOT/%{web_prefixdir}/bootstrap
 %__rm -f $RPM_BUILD_ROOT/%{web_prefixdir}/Makefile*
 %__rm -f $RPM_BUILD_ROOT/%{web_prefixdir}/*.in
+%__rm -f $RPM_BUILD_ROOT/%{web_prefixdir}/conf
 %__install -d -m 0755 $RPM_BUILD_ROOT@varstatedir@/ganglia/filters
+%__install -d -m 0755 $RPM_BUILD_ROOT@varstatedir@/ganglia/conf
 %__install -d -m 0755 $RPM_BUILD_ROOT@varstatedir@/ganglia/dwoo
 
 %files
 %defattr(-,root,root)
 %attr(0755,nobody,nobody)@varstatedir@/ganglia/filters
+%attr(0755,apache,apache)@varstatedir@/ganglia/conf
 %attr(0755,apache,apache)@varstatedir@/ganglia/dwoo
 %dir %{web_prefixdir}/
 #%dir %{web_prefixdir}/conf
