--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -312,14 +312,16 @@ $conf['overlay_events_line_type'] = "dashed";
 $conf['overlay_events_provider'] = "json";
 # Where is the Overlay events file stored
 $conf['overlay_events_file'] = $conf['conf_dir'] . "/events.json";
-$conf['overlay_events_color_map_file'] = $conf['conf_dir'] . "/event_color.json";
+
 # If using MDB2, connection string:
-$conf['overlay_events_dsn'] = "mysql://dbuser:dbpasword@localhost/ganglia";
+$conf['overlay_events_dsn'] = "mysql://dbuser:dbpassword@localhost/ganglia";
+
+$conf['overlay_events_color_map_file'] = $conf['conf_dir'] . "/event_color.json";
 
 # For event shading.  Value in hex, 'FF' = 100% opaque.
 # the _shade_ value should be less than _tick_
 $conf['overlay_events_tick_alpha']  = '30';
-$conf['overlay_events_shade_alpha'] = '50';
+$conf['overlay_events_shade_alpha'] = '20';
 
 # Colors to use e.g. in graph_colors
 $conf['graph_colors'] = array("0000A3", "FF3300", "FFCC33", "00CC66", "B88A00", "33FFCC", "809900", "FF3366", "FF33CC", "CC33FF", "CCFF33", "FFFF66", "33CCFF");
