--- a/gweb.spec.in
+++ b/gweb.spec.in
@@ -39,12 +39,16 @@ written in the PHP5 language and uses the Dwoo templating engine.
 %__install -d -m 0755 $RPM_BUILD_ROOT@varstatedir@/ganglia/conf
 %__cp -rf conf/* $RPM_BUILD_ROOT@varstatedir@/ganglia/conf
 %__install -d -m 0755 $RPM_BUILD_ROOT@varstatedir@/ganglia/dwoo
+%__install -d -m 0755 $RPM_BUILD_ROOT@varstatedir@/ganglia/dwoo/compiled
+%__install -d -m 0755 $RPM_BUILD_ROOT@varstatedir@/ganglia/dwoo/cache
 
 %files
 %defattr(-,root,root)
 %attr(0755,nobody,nobody)@varstatedir@/ganglia/filters
 %attr(0755,@varapacheuser@,@varapacheuser@)@varstatedir@/ganglia/conf
 %attr(0755,@varapacheuser@,@varapacheuser@)@varstatedir@/ganglia/dwoo
+%attr(0755,@varapacheuser@,@varapacheuser@)@varstatedir@/ganglia/dwoo/compiled
+%attr(0755,@varapacheuser@,@varapacheuser@)@varstatedir@/ganglia/dwoo/cache
 %{web_prefixdir}/*
 /var/lib/ganglia/conf/*
 %config(noreplace) %{web_prefixdir}/conf_default.php
