--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -280,6 +280,11 @@ $conf['graph_sizes'] = array(
 $conf['default_graph_size'] = 'default';
 $conf['graph_sizes_keys'] = array_keys( $conf['graph_sizes'] );
 
+# sets a default graph size separate from the regular default graph size. You                                                            
+# can also set this default on a per-view basis by setting 'default_size' in                                                             
+# the view .json file.                                                                                                                   
+$conf['default_view_graph_size'] = 'default';                                                                                            
+
 # The API can serve up graphs, but the URLs should be fully qualified.
 # The default value is a hack to serve up the called hostname when
 # possible. It is best to define this manually.
