--- a/ganglia-web.spec.in
+++ b/ganglia-web.spec.in
@@ -11,9 +11,9 @@ Buildroot: %{_tmppath}/%{name}-%{version}-buildroot
 Obsoletes: ganglia-webfrontend
 Requires: php >= 5, php-gd
 %if 0%{?suse_version}
-%define web_prefixdir /srv/www/htdocs/gweb
+%define web_prefixdir /srv/www/htdocs/ganglia
 %else
-%define web_prefixdir /var/www/html/gweb
+%define web_prefixdir /var/www/html/ganglia
 %endif
 Prefix: %{web_prefixdir}
 BuildArchitectures: noarch
