graph cpu steal if available

--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -112,6 +112,7 @@ $conf['cpu_nice_color'] = "ffea00";
 $conf['cpu_system_color'] = "dd0000";
 $conf['cpu_wio_color'] = "ff8a60";
 $conf['cpu_idle_color'] = "e2e2f2";
+$conf['cpu_steal_color'] = "990099";
 
 #
 # Colors for the MEMORY report graph
