Config option: allow DOWN hosts to be hidden in cluster view.

--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -169,6 +169,11 @@ $conf['default_metric'] = "load_one";
 $conf['strip_domainname'] = false;
 
 #
+# hide down hosts from cluster view
+#
+$conf['cluster_hide_down_hosts'] = false;
+
+#
 # Optional summary graphs
 # This function is deprecated. Please configure included reports
 # in the UI or default.json. Please do not use 
