Remove graph_arguments. Make sure events are not writeable when auth is readonly

--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -57,7 +57,7 @@ $conf['rrdtool_slope_mode'] = true;
 $conf['rrdcached_socket'] = "";
 
 # Location for modular-graph files.
-$conf['graphdir']='./graph.d';
+$conf['graphdir']= $conf['gweb_root'] . '/graph.d';
 
 # Display statistical values on RRD graphs; i.e.: average, min, max
 $conf['graphreport_stats'] = true;
