Reinstate the optional graph arguments feature in a secure manner. The use of the eval() function has been removed. A user configuration option has been added to control this feature conf[enable_pass_in_arguments_to_optional_graphs] that has a default value of false.

--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -361,4 +361,7 @@ $conf['show_stacked_graphs'] = 1;
 # If set to true the grid view will always be displayed even when only a
 # single cluster has been defined.
 $conf['always_display_grid_view'] = true;
+
+# Control whether arguments can be passed into php reports
+$conf['enable_pass_in_arguments_to_optional_graphs'] = false;
 ?>
