--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -382,6 +382,12 @@ $conf['show_stacked_graphs'] = 1;
 # single cluster has been defined.
 $conf['always_display_grid_view'] = true;
 
+# Color for the timeshift line
+$conf['timeshift_line_color'] = "#FFD17F";
+
+# Color for trend line
+$conf['trend_line_color'] = "#53E2FF";
+
 # Control whether arguments can be passed into php reports
 $conf['enable_pass_in_arguments_to_optional_graphs'] = false;
 ?>
