Show reports only if their associated metrics are defined
We have a large number of custom reports but only some of our monitored hosts
collect metrics appropriate for those reports.  The current web front end shows
an empty graph when the metric isn't present.

This commit adds a configuration array parameter ($report_to_metric) to
associate metrics with reports.  In host view, if the specified metric
isn't defined for a given host, then the report won't be shown.  In cluster
view, if the specified metric isn't defined for the first host in the
cluster, then the cluster summary report won't be shown.

(Ideally this should probably be handled by the report module itself, but since
the report module isn't called until after the page layout has already been
determined, this isn't currently feasible)

--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -192,6 +192,17 @@ $conf['cluster_hide_down_hosts'] = false;
 # in the UI or default.json. Please do not use 
 #$conf['optional_graphs'] = array('packet');
 
+#
+# If you have different hosts reporting different metrics you may wish
+# to show reports for those metrics only on the hosts that have them.
+# This array maps metric names to report names- if the metric in question
+# isn't present, the report won't be shown.
+#
+#$conf['report_to_metric'] = array(
+#       "packet_report" => "pkts_in"
+#);
+#
+
 # Enable Zoom support on graphs
 $conf['zoom_support'] = true;
 
