Fixes and simplications of build files.
Makefile contained references to DESTDIR, which has since been renamed GDESTDIR.
Also, the Gmetad root / Gweb root references were confused.

I've attempted to fix up the RPM spec also, but I suspect that the
'custom_web_prefixdir' needs defining and passing from the Makefile.
Unfortunately I'm unfamiliar with RPM builds.

--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -33,7 +33,7 @@ $conf['template_name'] = "default";
 #
 
 # Where gmetad stores the rrd archives.
-$conf['gmetad_root'] = "@varstatedir@/ganglia";
+$conf['gmetad_root'] = "@vargmetadir@";
 $conf['rrds'] = "${conf['gmetad_root']}/rrds";
 
 # Where Dwoo (PHP templating engine) store compiled templates
