--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -395,4 +395,9 @@ $conf['enable_pass_in_arguments_to_optional_graphs'] = false;
 # Control wether present graphs with 'bytes', 'Bytes', 'bytes/s', 'Bytes/s', 'kB', 'MB', 'GB', 'bits', 'Bits', 'bits/s', 'Bits/s'
 # as vertical label have their base value set to 1024
 $conf['rrdtool_base_1024'] = false;
+
+# Metrics autocompletion picker. This loads all metrics asynchronously
+# during search, rather than pre-loading at page load.
+$conf['picker_autocomplete'] = false;
+
 ?>
