--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -231,6 +231,7 @@ $conf['graphite_prefix'] = "";
 # returns every single host and all the metrics. If you have lots of hosts and lots of 
 # checks this may be quite heavy so you may want to cache data
 $conf['cachedata'] = 1;
+$conf['cachemodule'] = 'Json';
 $conf['cachefile'] = $conf['conf_dir'] . "/ganglia_metrics.cache";
 $conf['cachetime'] = 1200; // How long to cache the data in seconds
 
@@ -407,5 +408,8 @@ $conf['picker_autocomplete'] = false;
 # attack vector for malicious users so ad-hoc-views are disabled by
 # default.
 $conf['ad-hoc-views'] = false;
+
+# Configure memcache server(s) for any memcached capabilities.
+$conf['memcached_servers'] = array ( '127.0.0.1:11211' );
 
 ?>
