Reports only in cluster view and not host view
When collection the optional graphs for a host, the logic is as follows:

- get default_reports from default.json
- get cluster_override_reports from cluster_<name>.json
- if host_<name>.json exists, take these as overwrite_reports, otherwise
  use the cluster_override
- at last merge all three reports

So, even if there is a host_<name>.json, we always merge in the
cluster reports.

For the Power systems we use, we have graphs that are only useful in
the cluster view. These cluster graphs should not be displayed for the
hosts. Since the current behavior might be useful for other people
make it configurable with $conf['optional_cluster_graphs_for_host_view']

--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -389,6 +389,9 @@ $conf['show_stacked_graphs'] = 1;
 # single cluster has been defined.
 $conf['always_display_grid_view'] = true;
 
+# In the host view, should we include/exclude optional cluster graphs?
+$conf['optional_cluster_graphs_for_host_view'] = true;
+
 # Color for the timeshift line
 $conf['timeshift_line_color'] = "#FFD17F";
 
