hide selected metrics from drop down menu
We have hundreds of local metrics that are only useful for a single
host. Currently all of these metrics are added to the drop down
menu in the cluster view.

This patch defines the configuration option
'cluster_hide_metrics_from_menu', a regular expression. All metrics
matching this regular expression are hidden from the drop down menu.

--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -189,6 +189,12 @@ $conf['strip_domainname'] = false;
 $conf['cluster_hide_down_hosts'] = false;
 
 #
+# hide special metrics from drop-down list in cluster view,
+# all metrics matching the regular expression are hidden
+#
+$conf['cluster_hide_metrics_from_menu'] = '^(cluster|host)_.*_report';
+
+#
 # Optional summary graphs
 # This function is deprecated. Please configure included reports
 # in the UI or default.json. Please do not use 
