--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -428,4 +428,9 @@ $conf['display_events_using_calendar'] = false;
 # "Exchange Servers/Throughtput". Individual path entries are
 # separated by a forward slash.
 $conf['display_views_using_tree'] = true;
+
+# Array of pathnames that define view tree nodes that should be opened
+# when the tree is first created in a browser session. Path entries are 
+# separated using "--"
+#$conf['view_tree_nodes_initially_open'] = array();
 ?>
