[build & packaging] Reworked the install and packaging so it results in the same   installation whatever the build is (manual, deb pkg or rpm pkg) - Use Makefile to make install for deb and rpm as well including config files. - Include specfile in the dist-gzip so a rpmbuild -tb (tarbuild) can be used - Added customization for rpmbuild using --with tags (see spec file for   usage and more details). - Use adequate default values for rpm. The apache_user is not www-data. it's apache... - Use /etc/ganglia-webfrontend to store conf.php what ever the distro is.   Make sure that a link is set to apache config dir using triggers or postinstall. - Use /etc/ganglia-webfrontend to store conf.php what ever the distro is.   Use a generic conf.php in /usr/share/ganglia-webfrontend to load the file from   /etc/ganglia-webfrontend. - Replaced vargwebstatedir with vargwebdir in conf_default.php.in and Makefile. - filters dir was not created under debian pkg or manual make install - Added possibility to have a httpd_group different from user. For instance you   can choose to install files under apache.daemon identity. If not specified,   a group with the same name as the user is used. - Added comment in the install section of the Makefile so it's clear. - Reworked dist-gzip target so version.php  and spec file are generated while other   .in files remain so they can be tuned by make or make install. - Make sure that sharedstatedir is not owned by rpm package (conflict on fc-18+),   and updated %file section accordingly. - Removed the manual install and specific config files in debian packaging. Using   standard make install DESTDIR=...

--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -10,7 +10,7 @@
 # Gmetad-webfrontend version. Used to check for updates.
 #
 $conf['gweb_root'] = dirname(__FILE__);
-$conf['gweb_confdir'] = "@vargwebstatedir@";
+$conf['gweb_confdir'] = "@vargwebdir@";
 
 include_once $conf['gweb_root'] . "/version.php";
 
