--- a/ganglia-web.spec.in
+++ b/ganglia-web.spec.in
@@ -1,3 +1,33 @@
+
+# The following options are supported:
+#   --with httpd_user=<username>       # defaults to: apache
+#   --with httpd_group=<group>         # defaults to: apache
+#   --with web_prefixdir=<path>        # defaults to: @GDESTDIR@
+#   --with gweb_statedir=<path>        # defaults to: @vargwebdir@
+#   --with gweb_confdir=<path>         # defaults to: @etcdir@
+
+# example: rpmbuild -tb ganglia-web-3.5.12.tar.gz --with httpd_user=www-data --with httpd_group=www-data --with web_prefixdir=/srv/www/ganglia
+
+# Default value for web_prefixdir depending on distro.
+%if 0%{?suse_version}
+%define web_prefixdir /srv/www/htdocs/ganglia
+%else
+%define web_prefixdir @GDESTDIR@
+%endif
+
+# Default value for httpd user and group.
+%define httpd_user apache
+%define httpd_group apache
+%define gweb_statedir @vargwebdir@
+%define gweb_confdir @etcdir@
+
+# Read the provided --with tags if any (overriding default values).
+%{?_with_httpd_user:%define httpd_user %(set -- %{_with_httpd_user}; echo $1 | grep -v with | sed 's/=//')}
+%{?_with_httpd_group:%define httpd_group %(set -- %{_with_httpd_group}; echo $1 | grep -v with | sed 's/=//')}
+%{?_with_web_prefixdir:%define web_prefixdir %(set -- %{_with_web_prefixdir}; echo $1 | grep -v with | sed 's/=//')}
+%{?_with_gweb_statedir:%define gweb_statedir %(set -- %{_with_web_prefixdir}; echo $1 | grep -v with | sed 's/=//')}
+%{?_with_gweb_confdir:%define gweb_confdir %(set -- %{_with_web_prefixdir}; echo $1 | grep -v with | sed 's/=//')}
+
 Summary: Ganglia Web Frontend
 Name: ganglia-web
 Version: @GWEB_VERSION@
@@ -10,15 +40,6 @@ Source: %{name}-%{version}.tar.gz
 Buildroot: %{_tmppath}/%{name}-%{version}-buildroot
 Obsoletes: ganglia-webfrontend
 Requires: php >= 5, php-gd
-%if 0%{?suse_version}
-%define web_prefixdir /srv/www/htdocs/ganglia
-%else
-%define web_prefixdir %{custom_web_prefixdir}
-%endif
-
-%{!?custom_web_prefixdir: %define web_prefixdir /var/www/html/ganglia}
-
-Prefix: %{web_prefixdir}
 BuildArchitectures: noarch
 
 %description
@@ -30,35 +51,49 @@ written in the PHP5 language and uses the Dwoo templating engine.
 %setup -n %{name}-%{version}
 
 %build
+# Update all needed files
+%__make GDESTDIR=%{web_prefixdir} \
+        APACHE_USER=%{httpd_user} \
+        APACHE_GROUP=%{httpd_group} \
+        GWEB_STATEDIR=%{gweb_statedir} \
+        GCONFDIR=%{gweb_confdir}
 
 %install
 # Flush any old RPM build root
 %__rm -rf $RPM_BUILD_ROOT
 
-%__mkdir -p $RPM_BUILD_ROOT/%{web_prefixdir}
-%__cp -rf * $RPM_BUILD_ROOT/%{web_prefixdir}
-%__rm -rf $RPM_BUILD_ROOT/%{web_prefixdir}/conf
-%__rm -rf $RPM_BUILD_ROOT/%{web_prefixdir}/apache.conf
-%__install -d -m 0755 $RPM_BUILD_ROOT@vargwebdir@/filters
-%__install -d -m 0755 $RPM_BUILD_ROOT@vargwebdir@/conf
-%__cp -rf conf/* $RPM_BUILD_ROOT@vargwebdir@/conf
-%__install -d -m 0755 $RPM_BUILD_ROOT@vargwebdir@/dwoo
-%__install -d -m 0755 $RPM_BUILD_ROOT@vargwebdir@/dwoo/compiled
-%__install -d -m 0755 $RPM_BUILD_ROOT@vargwebdir@/dwoo/cache
-%__install -d -m 0755 $RPM_BUILD_ROOT@etcdir@
-%__cp -f apache.conf $RPM_BUILD_ROOT@etcdir@/
+%__make install GDESTDIR=%{web_prefixdir} \
+               APACHE_USER=%{httpd_user} \
+               APACHE_GROUP=%{httpd_group} \
+               GWEB_STATEDIR=%{gweb_statedir} \
+               GCONFDIR=%{gweb_confdir} \
+               DESTDIR=$RPM_BUILD_ROOT
+
+#%__mkdir -p $RPM_BUILD_ROOT/%{web_prefixdir}
+#%__cp -rf * $RPM_BUILD_ROOT/%{web_prefixdir}
+#%__rm -rf $RPM_BUILD_ROOT/%{web_prefixdir}/conf
+#%__rm -rf $RPM_BUILD_ROOT/%{web_prefixdir}/apache.conf
+#%__install -d -m 0755 $RPM_BUILD_ROOT@vargwebdir@/filters
+#%__install -d -m 0755 $RPM_BUILD_ROOT@vargwebdir@/conf
+#%__cp -rf conf/* $RPM_BUILD_ROOT@vargwebdir@/conf
+#%__install -d -m 0755 $RPM_BUILD_ROOT@vargwebdir@/dwoo
+#%__install -d -m 0755 $RPM_BUILD_ROOT@vargwebdir@/dwoo/compiled
+#%__install -d -m 0755 $RPM_BUILD_ROOT@vargwebdir@/dwoo/cache
+#%__install -d -m 0755 $RPM_BUILD_ROOT@etcdir@
+#%__cp -f apache.conf $RPM_BUILD_ROOT@etcdir@/
 
 %files
 %defattr(-,root,root)
-%attr(0755,nobody,nobody)@vargwebdir@/filters
-%dir %attr(0755,@varapacheuser@,@varapacheuser@)@vargwebdir@/conf
-%dir %attr(0755,@varapacheuser@,@varapacheuser@)@vargwebdir@/dwoo
-%attr(0755,@varapacheuser@,@varapacheuser@)@vargwebdir@/dwoo/compiled
-%attr(0755,@varapacheuser@,@varapacheuser@)@vargwebdir@/dwoo/cache
-%{web_prefixdir}/
-%config(noreplace) %{web_prefixdir}/conf_default.php
-@vargwebdir@/conf/*
-%config(noreplace) @etcdir@/apache.conf
+%dir %attr(0755,%{httpd_user},%{httpd_group})%{gweb_statedir}
+%dir %attr(0755,%{httpd_user},%{httpd_group})%{gweb_statedir}/filters
+%dir %attr(0755,%{httpd_user},%{httpd_group})%{gweb_statedir}/conf
+%{gweb_statedir}/conf/*
+%dir %attr(0755,%{httpd_user},%{httpd_group})%{gweb_statedir}/dwoo
+%attr(0755,%{httpd_user},%{httpd_group})%{gweb_statedir}/dwoo/compiled
+%attr(0755,%{httpd_user},%{httpd_group})%{gweb_statedir}/dwoo/cache
+%{web_prefixdir}/*
+%config(noreplace) %{gweb_confdir}/apache.conf
+%config(noreplace) %{gweb_confdir}/conf.php
 
 %clean
 %__rm -rf $RPM_BUILD_ROOT
@@ -68,18 +103,25 @@ written in the PHP5 language and uses the Dwoo templating engine.
 %triggerin -- httpd
 if [ $1 -eq 1 -a $2 -eq 1 ]; then
 	if [ ! -e /etc/httpd/conf.d/ganglia-web.conf ] ; then
-		ln -s @etcdir@/apache.conf /etc/httpd/conf.d/ganglia-web.conf
+		ln -s %{gweb_confdir}/apache.conf /etc/httpd/conf.d/ganglia-web.conf
 	fi
 fi
 
 %triggerun -- httpd
 if [ $2 -eq 0 ]; then
-	if [ -h /etc/httpd/conf.d/ganglia-web -a "`readlink /etc/httpd/conf/httpd.conf`" = "@etcdir@/apache.conf" ]; then
+	if [ -h /etc/httpd/conf.d/ganglia-web -a "`readlink /etc/httpd/conf/httpd.conf`" = "%{gweb_confdir}/apache.conf" ]; then
 		rm /etc/httpd/conf.d/ganglia-web.conf
 	fi
 fi
 
 %changelog
+* Fri Feb 28 2014 Olivier Lahaye <olivier.lahaye@cea.fr>
+- Added the ability to change Makefile variables using --with switch for the
+  following variables:
+    httpd_user, httpd_group, web_prefixdir, gweb_confdir, gweb_statedir
+- Reworked the web_prefixdir setup from the rpmbuild command line. Moved from
+  --define '%custom_web_prefixdir <webprefix>' to --with web_prefixdir=<prefix>
+  Also fixed a bug that prevented to fix the web_prefixdir on SuSE Linux.
 * Tue Jun 04 2013 Wesley Hirsch <emperorshishire@gmail.com>
 - Added default apache configuration
 * Thu Mar 17 2011 Bernard Li <bernard@vanhpc.org>
