Fix --with values unwanted dashes conversion to underscores.

--- a/ganglia-web.spec.in
+++ b/ganglia-web.spec.in
@@ -22,11 +22,11 @@
 %define gweb_confdir @etcdir@
 
 # Read the provided --with tags if any (overriding default values).
-%{?_with_httpd_user:%define httpd_user %(set -- %{_with_httpd_user}; echo $1 | grep -v with | sed 's/=//')}
-%{?_with_httpd_group:%define httpd_group %(set -- %{_with_httpd_group}; echo $1 | grep -v with | sed 's/=//')}
-%{?_with_web_prefixdir:%define web_prefixdir %(set -- %{_with_web_prefixdir}; echo $1 | grep -v with | sed 's/=//')}
-%{?_with_gweb_statedir:%define gweb_statedir %(set -- %{_with_web_prefixdir}; echo $1 | grep -v with | sed 's/=//')}
-%{?_with_gweb_confdir:%define gweb_confdir %(set -- %{_with_web_prefixdir}; echo $1 | grep -v with | sed 's/=//')}
+%{?_with_httpd_user:%define httpd_user %(set -- %{_with_httpd_user}; echo $2 | cut -d= -f2)}
+%{?_with_httpd_group:%define httpd_group %(set -- %{_with_httpd_group}; echo $2 | cut -d= -f2)}
+%{?_with_web_prefixdir:%define web_prefixdir %(set -- %{_with_web_prefixdir}; echo $2 | cut -d= -f2)}
+%{?_with_gweb_statedir:%define gweb_statedir %(set -- %{_with_web_prefixdir}; echo $2 | cut -d= -f2)}
+%{?_with_gweb_confdir:%define gweb_confdir %(set -- %{_with_web_prefixdir}; echo $2 | cut -d= -f2)}
 
 Summary: Ganglia Web Frontend
 Name: ganglia-web
