fix a stupid copy-past error from me.

--- a/ganglia-web.spec.in
+++ b/ganglia-web.spec.in
@@ -25,8 +25,8 @@
 %{?_with_httpd_user:%define httpd_user %(set -- %{_with_httpd_user}; echo $2 | cut -d= -f2)}
 %{?_with_httpd_group:%define httpd_group %(set -- %{_with_httpd_group}; echo $2 | cut -d= -f2)}
 %{?_with_web_prefixdir:%define web_prefixdir %(set -- %{_with_web_prefixdir}; echo $2 | cut -d= -f2)}
-%{?_with_gweb_statedir:%define gweb_statedir %(set -- %{_with_web_prefixdir}; echo $2 | cut -d= -f2)}
-%{?_with_gweb_confdir:%define gweb_confdir %(set -- %{_with_web_prefixdir}; echo $2 | cut -d= -f2)}
+%{?_with_gweb_statedir:%define gweb_statedir %(set -- %{_with_gweb_statedir}; echo $2 | cut -d= -f2)}
+%{?_with_gweb_confdir:%define gweb_confdir %(set -- %{_with_gweb_confdir}; echo $2 | cut -d= -f2)}
 
 Summary: Ganglia Web Frontend
 Name: ganglia-web
