Set the default value of display_views_using_tree to false. The value of true was inadvertently set in a prior commit.

--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -427,7 +427,7 @@ $conf['display_events_using_calendar'] = false;
 # the path from the root node to its desired folder, e.g. 
 # "Exchange Servers/Throughtput". Individual path entries are
 # separated by a forward slash.
-$conf['display_views_using_tree'] = true;
+$conf['display_views_using_tree'] = false;
 
 # Array of pathnames that define view tree nodes that should be opened
 # when the tree is first created in a browser session. Path entries are 
